--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,14 @@
-body{
+body {
     background-color: rgb(199, 98, 167);
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.6;
+}
+
+h1, h2, h3 {
+    font-weight: 700;
+}
+
+p {
+    font-size: 14px;
 }
